# paksentiment

./: .dockerignore  .gitignore  Readme.md  build.sh  docker-compose.yml  pyproject.toml  run.sh  start_servers.sh  test.sh
.github/: copilot-instructions.md
architecture/: class-diagram.md  data-schema.md  scraper-library-diagram.md
colly-sidecar/: .env  Dockerfile  README.md  clean_test_results.txt  go.mod  go.sum  main.go  test_colly_news.json  test_colly_news.txt
docs/: architecture.md  backend_design.md  database schema.txt  database_schema_proposal.md  epics.md  fastapi_ingestion_design.md  (+3 more)
new PakSentiment-data-gateway/: .gitignore  Dockerfile  README.md  dependencies.py  main.py  pyproject.toml  pytest.ini  scrapling_server.py  scrapling_test_results.txt  sentiment_classifier.py  test_apis.py  test_google_news.py  test_main.py  test_out.txt  test_scrapling_full.py  test_scrapling_mock.py  translation.py  verify_cleaning.py  verify_gateway.py
new PakSentiment-data-gateway/config/: .secrets.toml  __init__.py  settings.dev.toml  settings.prod.toml  settings.toml
new PakSentiment-data-gateway/fast_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
new PakSentiment-data-gateway/models/: schemas.py
new PakSentiment-data-gateway/routes/: commoncrawl.py  reddit.py  scrapling.py  sentiment.py  twitter.py  youtube.py
new PakSentiment-data-gateway/services/: commoncrawl_service.py  content_cleaner.py  reddit_service.py  scrapling_service.py  sentiment_classifier.py  sentiment_service_gw.py  translation.py  twitter_service.py  youtube_service.py
(+204 files in other folders)
