[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "paksentiment-scraper",
    "google-generativeai>=0.8.3",
    "dynaconf>=3.2.5",
    "langdetect>=1.0.9",
    "groq>=0.8.0",
    "msgspec>=0.20.0",
    "transformers>=4.40.0",
    "torch==2.2.2",
    "sentencepiece>=0.2.0",
    "bytez>=0.1.0",
    "numpy<2",
    "justext>=3.0.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
paksentiment-scraper = { path = "../PakSentiment-scraper", editable = true }
